prevent table overflow

--- a/flask_superadmin/static/css/admin.css
+++ b/flask_superadmin/static/css/admin.css
@@ -17,47 +17,33 @@ body
     padding-bottom:36px;
  }
 }
+
 input {
   line-height: 1em;
 }
-    #main-nav > .active > a, #main-nav > .active > a:hover {
-        background: none;
-        color:#717E93;
-        border-color:#717E93;
-        border-radius: 0;
-/*        text-shadow: none;
-        background-color:#717E93;
-        color:white;
-        border-radius: 4px;
-*/    }
-    #main-nav a {
-/*        border-left:2px solid transparent;;
-*//*        border-top:2px solid transparent;
-        border-bottom:2px solid transparent;
-*/        font-size:13px;
-        line-height: 1.3em;
-        font-weight: 600;
-        padding:8px 8px;
-        margin:0;
-        text-transform: uppercase;;
-    }
-    #main-nav li {
-        border-top: 1px solid rgba(113, 126, 147, 0.1);
-        line-height: 1em;
-    }
-    #main-nav {
-        border-bottom: 1px solid rgba(113, 126, 147, 0.1);
 
-    }
-/*    #main-nav > .active > a, #main-nav > .active > a:hover {
-        background-color:#717E93;
-        border-radius:3px;
-        text-shadow: white 0 1px 0 rgba(0, 0, 0, .1);
-        color:white;
-    }
-    #main-nav a:hover {
-        color:#717E93;
-    }*/
+#main-nav > .active > a, #main-nav > .active > a:hover {
+    background: none;
+    color:#717E93;
+    border-color:#717E93;
+    border-radius: 0;
+}
+#main-nav a {
+    font-size:13px;
+    line-height: 1.3em;
+    font-weight: 600;
+    padding:8px 8px;
+    margin:0;
+    text-transform: uppercase;;
+}
+#main-nav li {
+    border-top: 1px solid rgba(113, 126, 147, 0.1);
+    line-height: 1em;
+}
+#main-nav {
+    border-bottom: 1px solid rgba(113, 126, 147, 0.1);
+
+}
 
 .navbar-inner {
     background: none;
@@ -78,6 +64,7 @@ input {
 .table tbody tr:hover td,
 .table tbody tr:hover th {
     background: #F9F9F9;
+    word-break: break-all;
 }
 .table tbody tr.checked td{
   background:rgb(255, 255, 230)!important;
